# dbt_airflow_data_project

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
config/: settings.py
dags/: data_engineering_pipeline_dag.py
dbt_project/: .user.yml  dbt_project.yml
dbt_project/models/marts/: dim_technologies.sql  fct_technology_history.sql  fct_technology_metrics.sql  fct_technology_trends.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_github_repos.sql  stg_pypi_packages.sql
extractors/: github_extractor.py  pypi_extractor.py
